--- a/app/templates/hello.html
+++ b/app/templates/hello.html
@@ -5,7 +5,7 @@
 <body>
     <h1>Recipes are below:</h1>
     <ul>
-        {% for recipe in recipe %}
+        {% for recipe in recipes %}
             <li>
                 <ul>
                     <li>Title: {{recipe.title}}</li>
